--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -41,6 +41,15 @@
             android:name=".core.services.AudioServices"
             android:foregroundServiceType="mediaPlayback"
             android:enabled="true"/>
+
+        <receiver android:name=".presentation.screens.sebha.SimpleCounterWidgetReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/sebha_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
