--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -65,6 +65,10 @@
             android:foregroundServiceType="mediaProjection"
             tools:targetApi="q" />
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
+<!--        ca-app-pub-6570367924596598~3226706243-->
     </application>
 
 </manifest>
