--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,7 @@ kstore = "0.6.0"
 sqlDelight = "2.0.0-alpha05"
 apollo = "3.8.1"
 logback="1.2.3"
-settings="1.0.0"
+settings="1.1.1"
 
 [libraries]
 
@@ -46,7 +46,7 @@ ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "kto
 ktor-serilization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
 ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 logback-logback = { module = "ch.qos.logback: logback-classic", version.ref = "logback" }
-settings={module="com.russhwolf:multiplatform-settings",version.ref="settings"}
+settings={module="com.russhwolf:multiplatform-settings-no-arg",version.ref="settings"}
 
 composeIcons-featherIcons = { module = "br.com.devsrsouza.compose.icons:feather", version.ref = "composeIcons" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
